# HackerRank-The_Linux_Shell

./: CMake.md  Git Commands.md  README.md  intro_to_linux.md  servos_are_blocked.py  test_test.bash
HackerRank-The_linux_shell/bash/: Arithmetic_Operations.bash  Comparing_Numbers.bash  Getting_started_with_conditionals.bash
bash/: More_on_Conditionals.bash  looping_and_skipping  looping_with_numbers.bash  the_world_of_numbers.bash
lab1_cmake/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  defaultconfig.h  defaultconfig.h.in  main.cpp
lab1_cmake/include/: calc.hpp
lab1_cmake/lib/: CMakeLists.txt  Makefile  Wifi.cpp  Wifi.hpp  cmake_install.cmake
lab1_cmake/src/: calc.cpp
